--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "grunt": "^0.4.5"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "grunt": "^0.4.5"
+    "cucumber": "^0.4.4",
+    "grunt": "^0.4.5",
+    "grunt-cucumber": "^0.2.3",
+    "grunt-cucumberjs": "^0.5.0",
+    "protractor": "^1.4.0",
+    "protractor-cucumber": "^0.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
