--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,14 @@
     "tests"
   ],
   "devDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "angular-mocks": "~1.3.5",
+    "angular-route": "~1.3.5"
+  },
+  "dependencies": {
+    "jquery": "~2.1.1",
+    "bootstrap": "~3.3.1",
+    "angular": "~1.3.5",
+    "angular-resource": "~1.3.5"
   }
 }
