--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "grunt": "^0.4.5",
     "grunt-cucumber": "^0.2.3",
     "grunt-cucumberjs": "^0.5.0",
+    "grunt-karma": "^0.9.0",
+    "jasmine-core": "^2.1.3",
+    "karma": "^0.12.28",
+    "karma-chrome-launcher": "^0.1.6",
+    "karma-jasmine": "^0.3.2",
+    "karma-phantomjs-launcher": "^0.1.4",
     "protractor": "^1.4.0",
     "protractor-cucumber": "^0.1.2"
   },
