--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "chai": "^1.10.0",
+    "chai-as-promised": "^4.1.1",
     "cucumber": "^0.4.4",
     "grunt": "^0.4.5",
     "grunt-cucumber": "^0.2.3",
     "grunt-cucumberjs": "^0.5.0",
     "grunt-karma": "^0.9.0",
+    "grunt-protractor-runner": "^1.1.4",
     "jasmine-core": "^2.1.3",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.6",
     "karma-coffee-preprocessor": "^0.2.1",
     "karma-jasmine": "^0.3.2",
     "karma-phantomjs-launcher": "^0.1.4",
-    "protractor": "^1.4.0",
-    "protractor-cucumber": "^0.1.2"
+    "phantomjs": "^1.9.12",
+    "protractor": "^1.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
