--- a/package.json
+++ b/package.json
@@ -3,26 +3,30 @@
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
   "devDependencies": {
+    "bower": "^1.3.1",
     "chai": "^1.10.0",
     "chai-as-promised": "^4.1.1",
     "cucumber": "^0.4.4",
     "grunt": "^0.4.5",
-    "grunt-cucumber": "^0.2.3",
-    "grunt-cucumberjs": "^0.5.0",
     "grunt-karma": "^0.9.0",
     "grunt-protractor-runner": "^1.1.4",
+    "http-server": "^0.6.1",
     "jasmine-core": "^2.1.3",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.6",
-    "karma-coffee-preprocessor": "^0.2.1",
     "karma-jasmine": "^0.3.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "phantomjs": "^1.9.12",
     "protractor": "^1.4.0"
   },
   "scripts": {
+    "postinstall": "bower install",
+
+    "prestart": "npm install",
+    "start": "http-server -a 0.0.0.0 -p 8000",
+
+    "pretest": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
