--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "jasmine-core": "^2.1.3",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.6",
+    "karma-coffee-preprocessor": "^0.2.1",
     "karma-jasmine": "^0.3.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "phantomjs": "^1.9.12",
-    "protractor": "^1.4.0"
+    "protractor": "^1.4.0",
+    "shelljs": "^0.3.0",
+    "tmp": "0.0.24"
   },
   "scripts": {
     "postinstall": "bower install",
-
     "prestart": "npm install",
-    "start": "http-server -a 0.0.0.0 -p 8000",
-
+    "start": "http-server -a 0.0.0.0 -p 1999",
     "pretest": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
