--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "bootstrap": "~3.3.1",
     "angular": "~1.3.5",
     "angular-resource": "~1.3.5",
-    "angular-route": "~1.3.5"
+    "angular-route": "~1.3.5",
+    "bootstrap-ui": "~0.12.0"
   }
 }
